[1] Refactored most classes moving them to their modules. [2] Removed all arcade-based map classes. [3] Started implementing tk.Canvas as map.

--- a/languages/polish.txt
+++ b/languages/polish.txt
@@ -18,6 +18,7 @@ churches = kościoły
 hideouts = kryjówi
 castles = zamki
 military posts = stanice wojskowe
+fortress = forteca
 fortresses = fortece
 manufactures = manufaktury
 stables = hodowle
